# notify_service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
docker/nginx/: Dockerfile  generate_config.sh
docker/notify/: Dockerfile  entrypoint.sh
nginx/: nginx.conf
nginx/configs/: site.conf
notify_api/: pyproject.toml
notify_api/src/config/: celery.py  settings.py  urls.py
notify_api/src/notify/: apps.py  choices.py  constants.py  models.py  openapi_schemas.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
